--- a/database.yml.example
+++ b/database.yml.example
@@ -5,6 +5,7 @@ development:
   host: /home/git/postgresql
   port: 5432
   pool: 6
+  username: postgres
 
 test: &test
   adapter: postgresql
@@ -13,3 +14,4 @@ test: &test
   host: /home/git/postgresql
   port: 5432
   pool: 6
+  username: postgres
