--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # bootstrap docker compose file
-version: '2'
+version: '3'
 services:
   redis:
     image: "redis:3.0.7-alpine"
@@ -7,10 +7,17 @@ services:
   postgres:
     image: "postgres:9.6.1-alpine"
     network_mode: host
+  gitlab-development-kit-base:
+    build: base
+    image: gdk-base
   gitlab-development-kit:
     build: .
     image: gdk
     network_mode: host
     volumes:
-      - .:/gitlab-development-kit
-    command: sleep 10000
+      - gitlab/:/home/gdk/gitlab-development-kit
+      - go-gitlab-shell/:/home/gdk/go-gitlab-shell
+      - gitlab-runner/:/home/gdk/gitlab-runner
+    depends_on:
+      - gitlab-development-kit-base
+    command: gdk run
