Fix gdk volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,17 @@ services:
     image: "postgres:9.6.1-alpine"
     network_mode: host
   gitlab-development-kit-base:
-    build: base
+    build: ./base
     image: gdk-base
   gitlab-development-kit:
     build: .
     image: gdk
     network_mode: host
     volumes:
-      - ./gitlab/:/home/gdk/gitlab-development-kit
+      - ./gitlab/:/home/gdk/gitlab-development-kit/gitlab
       - ./go-gitlab-shell/:/home/gdk/go-gitlab-shell
       - ./gitlab-runner/:/home/gdk/gitlab-runner
     depends_on:
       - gitlab-development-kit-base
-    command: gdk run
+      - postgres
+      - redis
