--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
   postgres:
     image: "postgres:9.6.1-alpine"
     network_mode: host
+    volumes:
+      - ./postgres-data/:/var/lib/postgresql/data
   gitlab-development-kit-base:
     build: ./base
     image: gdk-base
