--- a/Procfile.example
+++ b/Procfile.example
@@ -43,6 +43,7 @@ registry: exec support/docker-registry
 
 # Additional services
 #
+runner: exec support/gdk-runner run
 #sshd: exec /usr/sbin/sshd -e -D -f /home/git/openssh/sshd_config
 #nginx: exec nginx -p /home/git/nginx -c conf/nginx.conf
 #elasticsearch: exec elasticsearch/bin/elasticsearch
