--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,3 +67,14 @@ test:install:
     - gdk run &
     - sleep 30
     - curl -f --retry 10 --retry-delay 5 http://127.0.0.1:3000/
+
+test:compose:
+  image: docker
+  stage: test
+  script:
+    - apk add --no-cache curl py-pip
+    - pip install docker-compose
+    - docker-compose up -d
+    - while [ ! -f gitlab/.gdk-installed ]; do sleep 2; done;
+    - sleep 30
+    - curl -f --retry 10 --retry-delay 5 http://127.0.0.1:3000/
