--- a/support/prometheus/prometheus-deployment.yml
+++ b/support/prometheus/prometheus-deployment.yml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: prometheus
-        image: prom/prometheus:latest
+        image: prom/prometheus:v1.8.2
         args:
           - '-config.file=/prometheus-data/prometheus.yml'
         ports:
