Use the latest version of Bundler (Bundler 2) for RubyGem 3.0
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,6 +84,7 @@ test:install:
     when: always
   script:
     - source /home/gdk/.bash_profile
+    - gem update --system
     - cd gem
     - gem build gitlab-development-kit.gemspec
     - gem install gitlab-development-kit-*.gem
