--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 - static
 - build
 - test
+- test_image
 
 variables:
   DOCKER_DRIVER: overlay
@@ -56,8 +57,7 @@ container_scanning:
     paths:
       - gl-sast-container-report.json
 
-
-build:image:
+build:image: &build_image
   image: docker:git
   stage: build
   script:
@@ -73,7 +73,7 @@ build:image:
       paths:
         - ./latest_image.tar
 
-test:install:
+test:install: &install
   image: $TEST_IMAGE
   stage: test
   artifacts:
@@ -102,7 +102,7 @@ test:install:
     - sleep 30
     - curl -f --retry 30 --retry-delay 5 http://127.0.0.1:3000/
 
-test:update:
+test:update: &update
   image: $TEST_IMAGE
   stage: test
   artifacts:
@@ -126,3 +126,23 @@ test:update:
     - sleep 30
     - curl -f --retry 30 --retry-delay 5 http://127.0.0.1:3000/
     - IGNORE_INSTALL_WARNINGS=true gdk update
+
+
+test_image:build:
+  <<: *build_image
+  stage: build
+  variables:
+    TEST_IMAGE: registry.gitlab.com/gitlab-org/gitlab-development-kit:$CI_COMMIT_REF_SLUG
+  when: manual
+
+test_image:install:
+  <<: *install
+  variables:
+    TEST_IMAGE: registry.gitlab.com/gitlab-org/gitlab-development-kit:$CI_COMMIT_REF_SLUG
+  when: manual
+
+test_image:update:
+  <<: *update
+  variables:
+    TEST_IMAGE: registry.gitlab.com/gitlab-org/gitlab-development-kit:$CI_COMMIT_REF_SLUG
+  when: manual
