--- a/Procfile.example
+++ b/Procfile.example
@@ -20,6 +20,7 @@ postgresql: exec support/postgresql-signal-wrapper postgres -D /home/git/postgre
 # Backend services
 #
 gitaly: exec gitaly/bin/gitaly /home/git/gitaly/config.toml
+praefect: exec gitaly/bin/praefect -config /home/git/gitaly/praefect-config.toml
 gitlab-workhorse: exec /usr/bin/env PATH="/home/git/gitlab-workhorse/bin:$PATH" gitlab-workhorse -authSocket /home/git/gitlab.socket -listenAddr $host:$port -documentRoot /home/git/gitlab/public -developmentMode -secretPath /home/git/gitlab/.gitlab_workhorse_secret -config /home/git/gitlab-workhorse/config.toml
 rails-background-jobs: exec /usr/bin/env SIDEKIQ_LOG_ARGUMENTS=1 RAILS_ENV=development RAILS_RELATIVE_URL_ROOT=$relative_url_root support/exec-cd gitlab bin/background_jobs start_foreground
 
