--- a/Procfile.example
+++ b/Procfile.example
@@ -20,7 +20,7 @@ postgresql: exec support/postgresql-signal-wrapper postgres -D /home/git/postgre
 # Backend services
 #
 gitaly: exec gitaly/bin/gitaly /home/git/gitaly/config.toml
-gitlab-workhorse: exec /usr/bin/env PATH="/home/git/gitlab-workhorse/bin:$PATH" gitlab-workhorse -authSocket /home/git/gitlab.socket -listenAddr $host:$port -documentRoot /home/git/gitlab/public -developmentMode -secretPath /home/git/gitlab/.gitlab_workhorse_secret -config /home/git/gitlab-workhorse/config.toml
+gitlab-workhorse: exec /usr/bin/env PATH="/home/git/gitlab-workhorse/bin:$PATH" gitlab-workhorse -authSocket /home/git/gitlab.socket -listenAddr $host:$port -documentRoot /home/git/gitlab/public -developmentMode -secretPath /home/git/gitlab/.gitlab_workhorse_secret -config /home/git/gitlab-workhorse/config.toml -prometheusListenAddr localhost:9229
 rails-background-jobs: exec /usr/bin/env SIDEKIQ_LOG_ARGUMENTS=1 RAILS_ENV=development RAILS_RELATIVE_URL_ROOT=$relative_url_root support/exec-cd gitlab bin/background_jobs start_foreground
 
 # Frontend services
@@ -37,7 +37,7 @@ registry: exec support/docker-registry
 #
 #influxdb: exec influxdb/bin/influxd -config influxdb/influxdb.conf
 #grafana: exec support/wait-postgresql-ready support/exec-cd grafana bin/grafana-server -config grafana.ini
-#prometheus: exec docker run --net host -p 9090:9090 -v /home/git/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml prom/prometheus:v2.8.1
+#prometheus: exec docker run --net host -p 9090:9090 -v /home/git/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml prom/prometheus:v2.10.0
 jaeger: exec jaeger/jaeger-VERSION/jaeger-all-in-one --memory.max-traces 512
 
 # Additional services
