--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,24 +1,14 @@
 global:
   scrape_interval: 15s # By default, scrape targets every 15 seconds.
 
-  # Attach these labels to any time series or alerts when communicating with
-  #   # external systems (federation, remote storage, Alertmanager).
-  external_labels:
-    monitor: 'gdk-monitor'
-
-  # A scrape configuration containing exactly one endpoint to scrape:
-  # Here it's Prometheus itself.
 scrape_configs:
-  # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'prometheus'
+  - job_name: 'gitlab-workhorse'
     static_configs:
-      - targets: ['localhost:9090']
-  - job_name: 'gitlab'
-    scrape_interval: 30s
+      - targets: ['docker.for.mac.localhost:9229']
+  - job_name: 'gitlab-unicorn'
     metrics_path: '/-/metrics'
     static_configs:
       - targets: ['docker.for.mac.localhost:3000']
   - job_name: 'gitaly'
-    scrape_interval: 5s
     static_configs:
       - targets: ['docker.for.mac.localhost:9236']
