--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -63,6 +63,12 @@ tracer:
   jaeger:
     enabled: true
     version: 1.10.1
+    health_check_http_port: 14269
+    processor:
+      host: ''
+      jaeger_binary_port: 6832
+      jaeger_compact_port: 6831
+      zipkin_compact_port: 5775
 username: git
 webpack:
   port: 3806
