--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -103,3 +103,11 @@ test:update:
     when: always
   script:
     - support/ci/test_update
+
+rubocop:
+  image: $TEST_IMAGE
+  stage: test
+  allow_failure: true
+  script:
+    - bundle exec rubocop
+
