Allow nginx to be more easily configured

--- a/nginx/conf/nginx.conf.example
+++ b/nginx/conf/nginx.conf.example
@@ -30,7 +30,7 @@ http {
   client_max_body_size 0;
 
   upstream gitlab-workhorse {
-    server 127.0.0.1:3000 fail_timeout=0;
+    server GDK_NGINX_IP:GDK_NGINX_WORKHORSE_PORT fail_timeout=0;
   }
 
   map $http_upgrade $connection_upgrade {
@@ -39,10 +39,10 @@ http {
   }
 
   server {
-    listen 127.0.0.1:3443 ssl;
+    listen GDK_NGINX_IP:GDK_NGINX_HTTPS_PORT ssl;
 
-    ssl_certificate /home/git/localhost.crt;
-    ssl_certificate_key /home/git/localhost.key;
+    ssl_certificate /home/git/GDK_NGINX_SSL_CERTIFICATE_FILENAME;
+    ssl_certificate_key /home/git/GDK_NGINX_SSL_CERTIFICATE_KEY_FILENAME;
 
     location / {
         proxy_set_header    Host                $http_host;
