--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,6 +88,7 @@ test:install:
   artifacts:
     paths:
       - ./gitlab-development-kit/gitlab/log/*.log
+      - ./gitlab-development-kit/*.log
     expire_in: 2 days
     when: always
   script:
