Allow "Waiting 5 seconds for previous warning to be noticed." warning to be disabled

--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -10,6 +10,7 @@ elasticsearch:
   version: 6.5.1
 gdk:
   overwrite_changes: false
+  pause_for_warnings: true
 gdk_root: !ruby/object:Pathname
   path: "/home/git/gdk"
 geo:
