Add logs to CI artifact

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -166,6 +166,7 @@ verify:install:
     paths:
       - ./gitlab-development-kit/gitlab/log/*.log
       - ./gitlab-development-kit/log
+      - ./gitlab-development-kit/*.log
     expire_in: 2 days
     when: always
   script:
@@ -182,6 +183,7 @@ verify:update:
     paths:
       - ./gitlab-development-kit/gitlab/log/*.log
       - ./gitlab-development-kit/log
+      - ./gitlab-development-kit/*.log
     expire_in: 2 days
     when: always
   script:
