--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -16,3 +16,9 @@ AllCops:
     - 'grafana/**/*'
     - 'influxdb/**/*'
     - 'tmp/**/*'
+
+Rails:
+  Enabled: false
+
+RSpec/ContextWording:
+  Enabled: false
