--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,14 +71,17 @@ default:
   - "vagrant/assets/**/*"
 
 .rules:docs-changes:
+  image: registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.6.5-golang-1.14-git-2.26-lfs-2.9-chrome-73.0-node-12.x-yarn-1.21-postgresql-10-graphicsmagick-1.3.34
   rules:
     - changes: *docs-changes
 
 .rules:code-changes:
+  image: registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.6.5-golang-1.14-git-2.26-lfs-2.9-chrome-73.0-node-12.x-yarn-1.21-postgresql-10-graphicsmagick-1.3.34
   rules:
     - changes: *code-changes
 
 .rules:docs-code-changes:
+  image: registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.6.5-golang-1.14-git-2.26-lfs-2.9-chrome-73.0-node-12.x-yarn-1.21-postgresql-10-graphicsmagick-1.3.34
   rules:
     - changes: *docs-code-changes
 
@@ -108,7 +111,6 @@ build:image:
 
 test:docs_lint:
   extends: .rules:docs-changes
-  image: registry.gitlab.com/gitlab-org/gitlab-docs:lint
   stage: test
   script:
     - vale --minAlertLevel error doc
@@ -116,14 +118,12 @@ test:docs_lint:
 
 test:static-analysis:
   extends: .rules:docs-code-changes
-  image: registry.gitlab.com/gitlab-org/gitlab-docs:lint
   stage: test
   script:
     - make static-analysis
 
 test:rspec:
   extends: .rules:code-changes
-  image: ruby:2.6
   stage: test
   script:
     - gem update bundler
@@ -137,7 +137,6 @@ test:rspec:
 
 test:rubocop:
   extends: .rules:code-changes
-  image: ruby:2.6
   stage: test
   script:
     - gem update bundler
