Ensure verify: jobs use the default image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -186,6 +186,7 @@ test:container_scanning:
 .verify_job:
   stage: verify
   extends: .rules:code-changes
+  image: $TEST_IMAGE
   artifacts:
     paths:
       - ./gitlab-development-kit/gitlab/log/*.log
