Allow failures for RuboCop for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -138,6 +138,7 @@ test:rspec:
 test:rubocop:
   extends: .rules:code-changes
   stage: test
+  allow_failure: true
   script:
     - gem update bundler
     - bundle install --jobs 4
