--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -44,6 +44,7 @@ gitlab_elasticsearch_indexer:
 gitlab_pages:
   auto_update: true
   enabled: true
+  domain: 127.0.0.1.xip.io
   port: 3010
 gitlab_shell:
   auto_update: true
