--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -104,6 +104,7 @@ praefect:
   database:
     dbname: praefect_development
     host: "/home/git/gdk/postgresql"
+    port: 5432
     sslmode: disable
   enabled: true
   internal_socket_dir: "/home/git/gdk/tmp/praefect"
