Added .use_tcp? to PostgreSQL and added Geo variant

--- a/.rubocop-gdk.yml
+++ b/.rubocop-gdk.yml
@@ -32,3 +32,8 @@ Rails:
 
 RSpec/ContextWording:
   Enabled: false
+
+RSpec/FilePath:
+  Exclude:
+    - 'spec/lib/gdk/postgresql_spec.rb'
+    - 'spec/lib/gdk/geo_postgresql_spec.rb'
