Added cache for bundle install during verify step

--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -9,6 +9,12 @@
     expire_in: 2 days
     when: always
   retry: 1
+  variables:
+    BUNDLE_PATH: '$CI_PROJECT_DIR/.bundle'
+  cache:
+    key: "gitlab-verify-bundle-$CI_SERVER_VERSION_MAJOR-$CI_SERVER_VERSION_MINOR"
+    paths:
+      - .bundle
 
 install:
   extends: .verify_job
