--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -44,7 +44,7 @@ gitlab_elasticsearch_indexer:
 gitlab_pages:
   auto_update: true
   enabled: true
-  hostname: 127.0.0.1.nip.io
+  host: 127.0.0.1.nip.io
   port: 3010
 gitlab_shell:
   auto_update: true
