--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@
 /gitlab-pages/bin
 /gitlab-pages/pkg
 /gitlab-pages/src
+/gitlab-k8s-agent/
 /gitlab-runner-config.toml
 /gitlab-shell
 /gitlab-shell/
