--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -21,7 +21,7 @@ install:
   script:
     - support/ci/verify_install
 
-update:
+update_from_master:
   extends: .verify_job
   script:
-    - support/ci/verify_update
+    - support/ci/verify_update master
