Add new verify:update_from_mr_branch CI job

--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -25,3 +25,8 @@ update_from_master:
   extends: .verify_job
   script:
     - support/ci/verify_update master
+
+update_from_mr_branch:
+  extends: .verify_job
+  script:
+    - support/ci/verify_update ${CI_COMMIT_SHA}
