Generate pages api secret and add it to configs

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 /gitlab-pages/pkg
 /gitlab-pages/src
 /gitlab-pages/gitlab-pages.conf
+/gitlab-pages-secret
 /gitlab-k8s-agent/
 /gitlab-runner-config.toml
 /gitlab-shell
