Set .tool-versions to latest tools

--- a/.gitlab/ci/_rules.gitlab-ci.yml
+++ b/.gitlab/ci/_rules.gitlab-ci.yml
@@ -6,6 +6,7 @@
   - "**/*.{rb,erb,sh,yml,example,types}"
   - "{lib,gem,bin}/**/*"
   - "{spec,support}/**/*"
+  - ".tool_versions"
   - ".gitlab-ci.yml"
   - ".gitlab/ci/**/*"
   - "Gemfile{,.lock}"
@@ -25,6 +26,7 @@
   - "**/*.{rb,erb,sh,yml,example,types}"
   - "{lib,gem,bin}/**/*"
   - "{spec,support}/**/*"
+  - ".tool_versions"
   - ".gitlab-ci.yml"
   - ".gitlab/ci/**/*"
   - "Gemfile{,.lock}"
