Add verbose flag to pages config

--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -58,6 +58,7 @@ gitlab_pages:
   host: 127.0.0.1.nip.io
   port: 3010
   secret_file: "/home/git/gdk/gitlab-pages-secret"
+  verbose: false
 gitlab_shell:
   auto_update: true
   dir: "/home/git/gdk/gitlab-shell"
