--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -48,7 +48,8 @@ container_scanning:
     - .docker:use-docker-in-docker
   stage: test
   allow_failure: true
-  dependencies: []
+  needs:
+    - release-image
   script:
     - docker run -d --name db arminc/clair-db:latest
     - docker run -p 6060:6060 --link db:postgres -d --name clair --restart on-failure arminc/clair-local-scan:v2.0.1
