New test:gdk_example_yml CI job

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -91,3 +91,9 @@ yard:
     expire_in: 1 week
     paths:
       - yard/*
+
+gdk_example_yml:
+  extends: .rules:code-changes
+  stage: test
+  script:
+    - support/ci/gdk_example_yml
