Add verify after script
When verify CI jobs are failing it might help when you can see which
processes are not running, so you can look at the associated logs for
that process.

--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -20,6 +20,8 @@
         - .tools-versions
     paths:
       - .bundle
+  after_script:
+    - support/ci/verify_post
 
 install:
   extends: .verify_job
