Roll asdf-managed dependencies forward

--- a/.gitlab/ci/_rules.gitlab-ci.yml
+++ b/.gitlab/ci/_rules.gitlab-ci.yml
@@ -6,7 +6,7 @@
   - "**/*.{rb,erb,sh,yml,example,types}"
   - "{lib,gem,bin}/**/*"
   - "{spec,support}/**/*"
-  - ".tool_versions"
+  - ".tool-versions"
   - ".gitlab-ci.yml"
   - ".gitlab/ci/**/*"
   - "Gemfile{,.lock}"
@@ -26,7 +26,7 @@
   - "**/*.{rb,erb,sh,yml,example,types}"
   - "{lib,gem,bin}/**/*"
   - "{spec,support}/**/*"
-  - ".tool_versions"
+  - ".tool-versions"
   - ".gitlab-ci.yml"
   - ".gitlab/ci/**/*"
   - "Gemfile{,.lock}"
