Pin docs image and Markdownlint
Also fix Vale warning to trigger documentation pipeline.

--- a/.gitlab/ci/test.gitlab-ci.yml
+++ b/.gitlab/ci/test.gitlab-ci.yml
@@ -1,8 +1,9 @@
 docs_lint:
   extends: .rules:docs-changes
+  image: "registry.gitlab.com/gitlab-org/gitlab-docs/lint:vale-2.3.3-markdownlint-0.23.2"
   stage: test
   script:
-    - PATH="${HOME}/go/bin:${PATH}" make lint
+    - make lint
 
 rubocop:
   extends: .rules:code-changes
