--- a/lefthook.yml
+++ b/lefthook.yml
@@ -1,7 +1,8 @@
-# Refer for explanation to following link:
+# Lefthook configuration. For more information, see:
 # https://github.com/Arkweid/lefthook/blob/master/docs/full_guide.md
 
 pre-push:
   commands:
+    # Run all tests (warn if there are any missing tools required for tests).
     test:
       run: make test_warn_missing_tools
