--- a/gdk.example.yml
+++ b/gdk.example.yml
@@ -141,6 +141,7 @@ registry:
   external_port: 5000
   host: 127.0.0.1
   image: registry.gitlab.com/gitlab-org/build/cng/gitlab-container-registry:v2.9.1-gitlab
+  listen_address: 127.0.0.1
   port: 5000
   self_signed: false
   tunnel_host: 127.0.0.1
