Add comment for Gitaly in .tool-versions
Also refactor how we treat CI variables for
better compatibility with pipelines for merged
results.

--- a/.gitlab/ci/verify.gitlab-ci.yml
+++ b/.gitlab/ci/verify.gitlab-ci.yml
@@ -34,4 +34,4 @@ update_from_master:
 update_from_mr_branch:
   extends: .verify_job
   script:
-    - support/ci/verify_update ${CI_COMMIT_SHA}
+    - support/ci/verify_update
