WIP: Debug gdk doctor

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,6 @@ include:
   - local: .gitlab/ci/_docker.gitlab-ci.yml
   - local: .gitlab/ci/pre.gitlab-ci.yml
   - local: .gitlab/ci/build.gitlab-ci.yml
-  - local: .gitlab/ci/test.gitlab-ci.yml
+  #- local: .gitlab/ci/test.gitlab-ci.yml
   - local: .gitlab/ci/verify.gitlab-ci.yml
-  - local: .gitlab/ci/deploy.gitlab-ci.yml
+  #- local: .gitlab/ci/deploy.gitlab-ci.yml
