--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - test
   - verify
   - deploy
+  - post
 
 variables:
   DEFAULT_IMAGE: registry.gitlab.com/gitlab-org/gitlab-build-images:ruby-2.6.6-golang-1.14-git-2.26-lfs-2.9-chrome-73.0-node-12.x-yarn-1.21-postgresql-11-graphicsmagick-1.3.34
@@ -17,7 +18,7 @@ default:
     - gitlab-org
 
 include:
-  - template: 'Workflows/MergeRequest-Pipelines.gitlab-ci.yml'
+  # - template: 'Workflows/MergeRequest-Pipelines.gitlab-ci.yml'
   - local: .gitlab/ci/_rules.gitlab-ci.yml
   - local: .gitlab/ci/_docker.gitlab-ci.yml
   - local: .gitlab/ci/pre.gitlab-ci.yml
@@ -25,3 +26,4 @@ include:
   - local: .gitlab/ci/test.gitlab-ci.yml
   - local: .gitlab/ci/verify.gitlab-ci.yml
   - local: .gitlab/ci/deploy.gitlab-ci.yml
+  - local: .gitlab/ci/post.gitlab-ci.yml
