--- a/.gitlab/ci/post.gitlab-ci.yml
+++ b/.gitlab/ci/post.gitlab-ci.yml
@@ -1,8 +1,13 @@
 deploy-gitpod-workspace-image:
+  extends:
+    # - .rules:code-changes
+    - .docker:use-docker-in-docker
+  image: docker:git
   stage: post
-  variables:
-    GIT_STRATEGY: none
+  before_script:
+    - apk add --no-cache jq curl
   script:
-    - echo "Hello Gitpod!"
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "gitpod-workspace-image" || $CI_COMMIT_TAG'
+    - ./support/docker ci-login
+    - cd ./support/gitpod && docker build . --tag "${GITPOD_WORKSPACE_IMAGE}" && docker push "${GITPOD_WORKSPACE_IMAGE}"
+  after_script:
+    - ./support/docker ci-logout
