--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,9 +22,9 @@ include:
   # - template: 'Workflows/MergeRequest-Pipelines.gitlab-ci.yml'
   - local: .gitlab/ci/_rules.gitlab-ci.yml
   - local: .gitlab/ci/_docker.gitlab-ci.yml
-  - local: .gitlab/ci/pre.gitlab-ci.yml
-  - local: .gitlab/ci/build.gitlab-ci.yml
-  - local: .gitlab/ci/test.gitlab-ci.yml
-  - local: .gitlab/ci/verify.gitlab-ci.yml
-  - local: .gitlab/ci/deploy.gitlab-ci.yml
+  # - local: .gitlab/ci/pre.gitlab-ci.yml
+  # - local: .gitlab/ci/build.gitlab-ci.yml
+  # - local: .gitlab/ci/test.gitlab-ci.yml
+  # - local: .gitlab/ci/verify.gitlab-ci.yml
+  # - local: .gitlab/ci/deploy.gitlab-ci.yml
   - local: .gitlab/ci/post.gitlab-ci.yml
