--- a/support/gitpod/Dockerfile
+++ b/support/gitpod/Dockerfile
@@ -49,8 +49,8 @@ RUN bash -lc ' \
         nvm alias default $NODE_VERSION && \
         export GO_VERSION=$(awk "\$1 == \"golang\" {print \$2}" "$HOME/gitlab-development-kit/.tool-versions") && \
         rm -rf go && curl -sSL https://storage.googleapis.com/golang/go$GO_VERSION.linux-amd64.tar.gz | tar xzs && \
-        cd gitlab-development-kit && gdk install shallow_clone=true && \
-        rm -rf gitlab && \
+        cd gitlab-development-kit && gdk install shallow_clone=true && gdk stop \
+        rm -r -rf gitlab && \
         cp $HOME/gitlab-development-kit/support/completions/gdk.bash $HOME/.bashrc.d/90-gdk \
     '
 
